# progOS

./: CMakeLists.txt
week1/: age.c  calcul.c  intervalle.c  intervalle2.c
week2/: 01-tables.c  02-balls.c  03-balls.c  04-pret.c  05-prime.c  06-formulas.c  07-polynomials.c  08-useless.c  balls  balls2
week3/: 01-scalaire.c  02-mulmat.c  03-recouvrement.c  04-complexes.c  05-complexes2.c
week4/: 01-ecriture.c  02-lecture.c  03-stat.c  a.out
week5/: 01-echange.c  02-selecteur.c  03-explore.c
